# CSVReader

./: csvparse.cabal  stack.yaml
in/: clients.csv
src/: Client.hs  CsvRead.hs  JSONWrite.hs  Main.hs  Util.hs
